Memory Match V0.1 - Fixed invisible stats section - Ryan Transfiguracion

--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ div.page-wrapper
     top: 16vh;
     width: 16vw;
     height: 60%;
-    overflow: hidden;
     text-align: center;
 }
 
